# newspaper

./: pyproject.toml
accounts/: admin.py  forms.py  tests.py  views.py
accounts/migrations/: 0001_initial.py
articles/: admin.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_comment.py
core/: settings.py  urls.py
pages/: tests.py  urls.py
staticfiles/: staticfiles.json
templates/: base_public.html
templates/articles/: create.html  delete.html  detail.html  edit.html  list.html
templates/pages/: home.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
