[project]
name = "newspaper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.5",
    "django-crispy-forms>=2.4",
    "environs[django]>=14.3.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "whitenoise>=6.9.0",
]
